--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <div class="form-group">
                 <label for="name">Raghad:</label>
                 <input id="name" name="name" type="text" placeholder="Raghad" required>
+            </div>
 
       <!-- Name field - TODO: add label, id=, name=, placeholder=, and make required -->
       <!-- Example to achieve: <label for="name">Your Name:</label> -->
@@ -110,6 +111,7 @@
 
       <!-- Message field - TODO: add label, id=, name=, placeholder=, and make required -->
       <!-- Example to achieve: <label for="message">Your Post:</label> -->
+                <div class="valid-feedback">
 
                 <label for="message">Your Post:</label>
                 <textarea id="message" name="message" rows="4" placeholder="Write your post..." required></textarea>
